--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,13 @@
 {
   "name": "MyAgent",
   "short_name": "MyAgent",
-  "start_url": "/?source=webapp",
+  "start_url": "/agent-pwa/",
+  "scope": "/agent-pwa/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#0b6efd",
   "icons": [
-    { "src": "/icons/192.png", "sizes": "192x192", "type": "image/png" },
-    { "src": "/icons/512.png", "sizes": "512x512", "type": "image/png" },
-    { "src": "/icons/maskable.png", "sizes": "512x512", "type": "image/png", "purpose": "maskable" }
+    { "src": "/agent-pwa/icons/192.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "/agent-pwa/icons/512.png", "sizes": "512x512", "type": "image/png" }
   ]
 }
