--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,36 @@
 {
-"name": "MyAgent",
-"short_name": "MyAgent",
-"start_url": "/agent-pwa/",
-"scope": "/agent-pwa/",
-"display": "standalone",
-"background_color": "#ffffff",
-"theme_color": "#0b6efd",
-"icons": [
-{ "src": "/agent-pwa/icons/192.png", "sizes": "192x192", "type": "image/png" },
-{ "src": "/agent-pwa/icons/512.png", "sizes": "512x512", "type": "image/png" },
-{ "src": "/agent-pwa/icons/maskable.png", "sizes": "512x512", "type": "image/png", "purpose": "maskable" }
-]
+  "name": "MyAgent",
+  "short_name": "MyAgent",
+  "description": "Your AI Assistant",
+  "start_url": "/?source=pwa",
+  "display": "standalone",
+  "background_color": "#ffffff",
+  "theme_color": "#0b6efd",
+  "orientation": "portrait-primary",
+  "scope": "/",
+  "icons": [
+    {
+      "src": "icons/192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "icons/512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "icons/maskable.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "icons/apple-touch-icon.png",
+      "sizes": "180x180",
+      "type": "image/png"
+    }
+  ]
 }
