--- a/manifest.json
+++ b/manifest.json
@@ -10,25 +10,25 @@
   "scope": "/",
   "icons": [
     {
-      "src": "icons/192.png",
+      "src": "/agent-pwa/icons/192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "icons/512.png",
+      "src": "/agent-pwa/icons/512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "icons/maskable.png",
+      "src": "/agent-pwa/icons/maskable.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
     },
     {
-      "src": "icons/apple-touch-icon.png",
+      "src": "/agent-pwa/icons/apple-touch-icon.png",
       "sizes": "180x180",
       "type": "image/png"
     }
